<resources>
    <string name="app_name">PrimerTP</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="saludo_login">Ingrese</string>
    <string name="saludo_registro">Registrese</string>
    <string name="contraseña">Ingrese su contraseña</string>
    <string name="log_id">Ingrese su n° de afiliado</string>
    <string name="usuario">Ingrese su usuario</string>
    <string name="id">Ingrese su n° de afiliado</string>
    <string name="mail">Ingrese su email</string>
    <string name="registro">Registrar</string>
    <string name="ingreso">Ingresar</string>
</resources>