<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludo_registro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_tf_mail"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_tf_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/layout_tf_usuario"
        app:layout_constraintTop_toTopOf="@+id/tvSaludo"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_tf_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/layout_tf_id"
        app:layout_constraintTop_toTopOf="@+id/layout_tf_mail"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_tf_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/layout_tf_contraseña"
        app:layout_constraintTop_toTopOf="@+id/layout_tf_usuario"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_tf_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/btnRegistro"
        app:layout_constraintTop_toTopOf="@+id/layout_tf_id"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_tf_contraseña"
        app:layout_constraintBottom_toTopOf="@id/btnRegistro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_tf_contraseña"
        android:text="@string/registro"
        />

</androidx.constraintlayout.widget.ConstraintLayout>